--- a/src/app/layout/common/user/user.component.html
+++ b/src/app/layout/common/user/user.component.html
@@ -1,5 +1,5 @@
 <!-- Button -->
-<button mat-icon-button [matMenuTriggerFor]="userActions">
+<!-- <button mat-icon-button [matMenuTriggerFor]="userActions">
     <span class="relative">
         @if (showAvatar && user.avatar) {
             <img class="h-7 w-7 rounded-full" [src]="user.avatar" />
@@ -18,9 +18,9 @@
             }"
         ></span>
     </span>
-</button>
+</button> -->
 
-<mat-menu [xPosition]="'before'" #userActions="matMenu">
+<!-- <mat-menu [xPosition]="'before'" #userActions="matMenu">
     <button mat-menu-item>
         <span class="flex flex-col leading-none">
             <span>Signed in as</span>
@@ -68,4 +68,4 @@
         <span class="mr-3 inline-flex h-4 w-4 rounded-full bg-gray-400"></span>
         <span>Invisible</span>
     </button>
-</mat-menu>
+</mat-menu> -->
