--- a/src/app/layout/layouts/vertical/classy/classy.component.html
+++ b/src/app/layout/layouts/vertical/classy/classy.component.html
@@ -23,7 +23,7 @@
             </div>
         </div>
         <!-- User -->
-        <div class="flex w-full flex-col items-center p-4">
+        <!-- <div class="flex w-full flex-col items-center p-4">
             <div class="relative h-24 w-24">
                 @if (user.avatar) {
                     <img
@@ -51,7 +51,7 @@
                     {{ user.email }}
                 </div>
             </div>
-        </div>
+        </div> -->
     </ng-container>
     <!-- Navigation footer hook -->
     <ng-container fuseVerticalNavigationContentFooter>
