--- a/src/app/layout/layouts/horizontal/material/material.component.html
+++ b/src/app/layout/layouts/horizontal/material/material.component.html
@@ -14,11 +14,7 @@
         <ng-container fuseVerticalNavigationContentHeader>
             <!-- Logo -->
             <div class="flex h-20 items-center px-8 pt-6">
-                <img
-                    class="w-24"
-                    src="images/logo/logo-text-on-dark.svg"
-                    alt="Logo image"
-                />
+                <img class="w-7 h-7 rounded-full hidden dark:block" src="assets/images/logos/trotapie.png" />
             </div>
         </ng-container>
     </fuse-vertical-navigation>
@@ -71,13 +67,13 @@
                 <div
                     class="ml-auto flex items-center space-x-1 pl-2 sm:space-x-2"
                 >
-                    <languages></languages>
+                    <!-- <languages></languages>
                     <fuse-fullscreen class="hidden md:block"></fuse-fullscreen>
                     <search [appearance]="'bar'"></search>
                     <shortcuts></shortcuts>
                     <messages></messages>
                     <notifications></notifications>
-                    <user></user>
+                    <user></user> -->
                 </div>
             </div>
             <!-- Bottom bar -->
