--- a/src/app/layout/common/settings/settings.component.html
+++ b/src/app/layout/common/settings/settings.component.html
@@ -1,4 +1,4 @@
-<div
+<!-- <div
     class="settings-cog fixed right-0 z-90 flex h-10 w-10 cursor-pointer items-center justify-center rounded-l-lg bg-red-600 bg-opacity-90 shadow-lg print:hidden"
     [class.lg:right-0]="
         config.layout === 'centered' || config.layout === 'material'
@@ -47,7 +47,6 @@
         </div>
 
         <div class="flex flex-col p-6">
-            <!-- Theme -->
             <div class="text-secondary text-md font-semibold">THEME</div>
             <div class="mt-6 grid grid-cols-2 gap-3 sm:grid-cols-3">
                 @for (theme of config.themes; track theme) {
@@ -72,10 +71,8 @@
 
             <hr class="my-8" />
 
-            <!-- Scheme -->
             <div class="text-secondary text-md font-semibold">SCHEME</div>
             <div class="mt-6 grid grid-cols-3 justify-items-start gap-3">
-                <!-- Auto -->
                 <div
                     class="bg-hover flex cursor-pointer items-center rounded-full py-3 pl-5 pr-6 ring-inset ring-primary"
                     [class.ring-2]="config.scheme === 'auto'"
@@ -95,7 +92,6 @@
                         Auto
                     </div>
                 </div>
-                <!-- Dark -->
                 <div
                     class="bg-hover flex cursor-pointer items-center rounded-full py-3 pl-5 pr-6 ring-inset ring-primary"
                     [class.ring-2]="config.scheme === 'dark'"
@@ -114,7 +110,6 @@
                         Dark
                     </div>
                 </div>
-                <!-- Light -->
                 <div
                     class="bg-hover flex cursor-pointer items-center rounded-full py-3 pl-5 pr-6 ring-inset ring-primary"
                     [class.ring-2]="config.scheme === 'light'"
@@ -136,11 +131,8 @@
             </div>
 
             <hr class="my-8" />
-
-            <!-- Layout -->
             <div class="text-secondary text-md font-semibold">LAYOUT</div>
             <div class="mt-6 grid grid-cols-3 gap-3">
-                <!-- Empty -->
                 <div
                     class="flex cursor-pointer flex-col"
                     (click)="setLayout('empty')"
@@ -161,7 +153,6 @@
                     </div>
                 </div>
 
-                <!-- Classic -->
                 <div
                     class="flex cursor-pointer flex-col"
                     (click)="setLayout('classic')"
@@ -218,7 +209,6 @@
                     </div>
                 </div>
 
-                <!-- Classy -->
                 <div
                     class="flex cursor-pointer flex-col"
                     (click)="setLayout('classy')"
@@ -280,7 +270,6 @@
                     </div>
                 </div>
 
-                <!-- Compact -->
                 <div
                     class="flex cursor-pointer flex-col"
                     (click)="setLayout('compact')"
@@ -336,7 +325,6 @@
                     </div>
                 </div>
 
-                <!-- Dense -->
                 <div
                     class="flex cursor-pointer flex-col"
                     (click)="setLayout('dense')"
@@ -392,7 +380,6 @@
                     </div>
                 </div>
 
-                <!-- Futuristic -->
                 <div
                     class="flex cursor-pointer flex-col"
                     (click)="setLayout('futuristic')"
@@ -449,7 +436,6 @@
                     </div>
                 </div>
 
-                <!-- Thin -->
                 <div
                     class="flex cursor-pointer flex-col"
                     (click)="setLayout('thin')"
@@ -513,7 +499,7 @@
 
                 <div class="col-span-2"></div>
 
-                <!-- Centered -->
+
                 <div
                     class="flex cursor-pointer flex-col"
                     (click)="setLayout('centered')"
@@ -566,7 +552,6 @@
                     </div>
                 </div>
 
-                <!-- Enterprise -->
                 <div
                     class="flex cursor-pointer flex-col"
                     (click)="setLayout('enterprise')"
@@ -627,7 +612,6 @@
                     </div>
                 </div>
 
-                <!-- Material -->
                 <div
                     class="flex cursor-pointer flex-col"
                     (click)="setLayout('material')"
@@ -688,7 +672,6 @@
                     </div>
                 </div>
 
-                <!-- Modern -->
                 <div
                     class="flex cursor-pointer flex-col"
                     (click)="setLayout('modern')"
@@ -741,4 +724,4 @@
             </div>
         </div>
     </div>
-</fuse-drawer>
+</fuse-drawer> -->
