--- a/src/app/modules/admin/example/example.component.html
+++ b/src/app/modules/admin/example/example.component.html
@@ -2,8 +2,10 @@
     <!-- Main -->
     <div class="flex-auto p-6 sm:p-10">
         <!-- CONTENT GOES HERE -->
+         test
         <div
             class="h-400 max-h-400 min-h-400 rounded-2xl border-2 border-dashed border-gray-300"
         ></div>
     </div>
 </div>
+
