--- a/src/app/components/hoteles/hoteles.component.html
+++ b/src/app/components/hoteles/hoteles.component.html
@@ -3,8 +3,7 @@
     <!-- Main -->
     <div class="flex-auto p-6 sm:p-10">
         <form [formGroup]="hotelesForm">
-            <div class="flex flex-col space-y-2">
-                <div class="flex items-center space-x-4">
+            <!-- <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-4">
                     <mat-button-toggle-group formControlName="hotelSeleccionado" class="inline-flex gap-2">
                         <mat-button-toggle *ngFor="let item of listaHoteles" [value]="item.nombrePadron"
                             class=" text-center flex items-center justify-center">
@@ -13,7 +12,17 @@
                             </span>
                         </mat-button-toggle>
                     </mat-button-toggle-group>
-                </div>
+                </div> -->
+            <div class="flex flex-wrap gap-2 mt-4">
+                <mat-button-toggle-group formControlName="hotelSeleccionado" class="flex flex-wrap w-full gap-2">
+                    <mat-button-toggle *ngFor="let item of listaHoteles" [value]="item.nombrePadron" class="text-center flex items-center justify-center
+                   flex-grow-0 flex-shrink-0 
+                   w-[calc(100%/3-0.5rem)] md:w-auto">
+                        <span class="text-sm text-center">
+                            {{ item.ciudad }}
+                        </span>
+                    </mat-button-toggle>
+                </mat-button-toggle-group>
             </div>
         </form>
         <!-- Cards  -->
