--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,3 +2,17 @@
 /*  @ Import/write your custom styles here.
 /*  @ Styles from this file will override 'vendors.scss' and Fuse's base styles.
 /* ----------------------------------------------------------------------------------------------------- */
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.card-animada {
+  animation: fadeInUp 0.6s ease-out forwards;
+}
