--- a/src/app/components/hoteles/hoteles.component.html
+++ b/src/app/components/hoteles/hoteles.component.html
@@ -1,25 +1,15 @@
 <div class="flex min-w-0 flex-auto flex-col">
 
     <!-- Main -->
-    <div class="flex-auto p-6 sm:p-10">
+    <div class="flex-auto p-3 sm:p-5">
         <form [formGroup]="hotelesForm">
-            <!-- <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-4">
-                    <mat-button-toggle-group formControlName="hotelSeleccionado" class="inline-flex gap-2">
-                        <mat-button-toggle *ngFor="let item of listaHoteles" [value]="item.nombrePadron"
-                            class=" text-center flex items-center justify-center">
-                            <span>
-                                {{ item.ciudad }}
-                            </span>
-                        </mat-button-toggle>
-                    </mat-button-toggle-group>
-                </div> -->
-            <div class="flex flex-wrap gap-2 mt-4">
+            <div class="flex flex-wrap gap-2">
                 <mat-button-toggle-group formControlName="hotelSeleccionado" class="flex flex-wrap w-full gap-2">
                     <mat-button-toggle *ngFor="let item of listaHoteles" [value]="item.nombrePadron"
                         (change)="destinoSeleccionado(item)" class="text-center flex items-center justify-center
                    flex-grow-0 flex-shrink-0 
                    w-[calc(100%/2-0.5rem)] md:w-auto">
-                        <span class="text-sm text-center">
+                        <span class="text-md text-center">
                             {{ item.ciudad }}
                         </span>
                     </mat-button-toggle>
@@ -27,14 +17,14 @@
             </div>
         </form>
 
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 p-4">
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 p-6">
             <div *ngIf="hotelesPorCiudad.length === 0 && ciudadSeleccionada" class="text-center text-red-500/80 text-lg mt-8">
                 No hay hoteles disponibles para esta ciudad.
             </div>
             <div *ngFor="let hotel of hotelesPorCiudad">
 
                 <fuse-card
-                    class="cursor-pointer filter-listing relative flex w-full flex-col bg-cover bg-center text-white rounded-2xl overflow-hidden transition duration-200 hover:scale-105 card-animada"
+                    class="cursor-pointer filter-listing relative flex w-full h-40 flex-col bg-cover bg-center text-white rounded-2xl overflow-hidden transition duration-200 hover:scale-105 card-animada"
                     [ngStyle]="{ 'background-image': 'url(' + (hotel.fondo || fallback) + ')' }"
                     (click)="verDetalleHotel(hotel)">
 
@@ -56,11 +46,7 @@
                         </div>
                     </div>
                 </fuse-card>
-
-                <!-- </a> -->
-
             </div>
         </div>
-        <!-- Cards  -->
     </div>
 </div>
