--- a/src/app/components/hoteles/hoteles.component.html
+++ b/src/app/components/hoteles/hoteles.component.html
@@ -1,54 +1,59 @@
-<div class="flex min-w-0 flex-auto flex-col">
+<div class="absolute inset-0 flex flex-col min-w-0 overflow-y-auto" cdkScrollable>
 
-    <!-- Main -->
-    <div class="flex-auto p-3 sm:p-5">
-        <form [formGroup]="hotelesForm">
-            <div class="flex flex-wrap gap-2">
-                <h1 class="text-2xl font-bold italic w-full">Seleccione un destino</h1>
+    <div class="flex min-w-0 flex-auto flex-col">
+        <div class="flex-auto p-3 sm:p-5">
+            <form [formGroup]="hotelesForm">
+                <div class="flex flex-wrap gap-2">
+                    <h1 class="text-2xl font-bold italic w-full">Seleccione un destino</h1>
 
-                <mat-button-toggle-group formControlName="hotelSeleccionado" class="flex flex-wrap w-full gap-2">
-                    <mat-button-toggle *ngFor="let item of listaHoteles" [value]="item.nombrePadron"
-                        (change)="destinoSeleccionado(item)" class="text-center flex items-center justify-center
-               flex-grow-0 flex-shrink-0 
-               w-[calc(100%/2-0.5rem)] md:w-auto">
-                        <span class="text-md text-center">
-                            {{ item.ciudad }}
-                        </span>
-                    </mat-button-toggle>
-                </mat-button-toggle-group>
-            </div>
-        </form>
+                    <mat-button-toggle-group formControlName="hotelSeleccionado" class="flex flex-wrap w-full gap-2">
+                        <mat-button-toggle *ngFor="let item of listaHoteles" [value]="item.ciudad"
+                            (change)="destinoSeleccionado(item)" class="text-center flex items-center justify-center
+                   flex-grow-0 flex-shrink-0 
+                   w-[calc(100%/2-0.5rem)] md:w-auto">
+                            <span class="text-md text-center">
+                                {{ item.ciudad }}
+                            </span>
+                        </mat-button-toggle>
+                    </mat-button-toggle-group>
+                </div>
+            </form>
 
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 p-6">
-            <div *ngIf="hotelesPorCiudad.length === 0 && ciudadSeleccionada"
-                class="text-center text-red-500/80 text-lg mt-8">
-                No hay hoteles disponibles para esta ciudad.
-            </div>
-            <div *ngFor="let hotel of hotelesPorCiudad">
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 p-6">
+                <div *ngIf="hotelesPorCiudad.length === 0 && ciudadSeleccionada"
+                    class="text-center text-red-500/80 text-lg mt-8">
+                    No hay hoteles disponibles para esta ciudad.
+                </div>
+                <div *ngFor="let hotel of hotelesPorCiudad">
 
-                <fuse-card
-                    class="cursor-pointer filter-listing relative flex w-full h-40 flex-col bg-cover bg-center text-white rounded-2xl overflow-hidden transition duration-200 hover:scale-105 card-animada"
-                    [ngStyle]="{ 'background-image': 'url(' + (hotel.fondo || fallback) + ')' }"
-                    (click)="verDetalleHotel(hotel)">
+                    <fuse-card
+                        class="cursor-pointer filter-listing relative flex w-full h-40 flex-col bg-cover bg-center text-white rounded-2xl overflow-hidden transition duration-200 hover:scale-105 card-animada"
+                        [ngStyle]="{ 'background-image': 'url(' + (hotel.fondo || fallback) + ')' }"
+                        (click)="verDetalleHotel(hotel)">
 
-                    <div class="absolute inset-0 bg-black/40 z-0"></div>
+                        <div class="absolute inset-0 bg-black/40 z-0"></div>
 
-                    <div class="relative z-10 m-8 mb-4">
-                        <div class="text-2xl font-semibold leading-tight">{{ hotel.nombre }}</div>
+                        <div class="relative z-10 m-8 mb-4">
+                            <div class="text-2xl font-semibold leading-tight">{{ hotel.nombre }}</div>
 
-                        <div class="-ml-1 mt-2 flex items-center leading-none">
-                            <div class="flex items-center">
-                                <mat-icon class="text-yellow-400 icon-size-5" [svgIcon]="'mat_outline:star'"></mat-icon>
-                                <mat-icon class="text-yellow-400 icon-size-5" [svgIcon]="'mat_outline:star'"></mat-icon>
-                                <mat-icon class="text-yellow-400 icon-size-5" [svgIcon]="'mat_outline:star'"></mat-icon>
-                                <mat-icon class="text-yellow-400 icon-size-5" [svgIcon]="'mat_outline:star'"></mat-icon>
-                                <mat-icon class="text-yellow-400 icon-size-5"
-                                    [svgIcon]="'mat_outline:star_half'"></mat-icon>
+                            <div class="-ml-1 mt-2 flex items-center leading-none">
+                                <div class="flex items-center">
+                                    <mat-icon class="text-yellow-400 icon-size-5"
+                                        [svgIcon]="'mat_outline:star'"></mat-icon>
+                                    <mat-icon class="text-yellow-400 icon-size-5"
+                                        [svgIcon]="'mat_outline:star'"></mat-icon>
+                                    <mat-icon class="text-yellow-400 icon-size-5"
+                                        [svgIcon]="'mat_outline:star'"></mat-icon>
+                                    <mat-icon class="text-yellow-400 icon-size-5"
+                                        [svgIcon]="'mat_outline:star'"></mat-icon>
+                                    <mat-icon class="text-yellow-400 icon-size-5"
+                                        [svgIcon]="'mat_outline:star_half'"></mat-icon>
+                                </div>
+                                <div class="ml-2">4.5</div>
                             </div>
-                            <div class="ml-2">4.5</div>
                         </div>
-                    </div>
-                </fuse-card>
+                    </fuse-card>
+                </div>
             </div>
         </div>
     </div>
