--- a/src/app/components/hoteles/detalles-hotel/detalle-hotel.component.html
+++ b/src/app/components/hoteles/detalles-hotel/detalle-hotel.component.html
@@ -69,7 +69,7 @@
 </div>
 <!-- Modal con formulario -->
 <div *ngIf="modalAbierto" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 px-6">
-    <div class="bg-white p-6 rounded-lg shadow-lg max-w-md w-full relative">
+    <div class="bg-white p-6 rounded-lg shadow-lg max-w-md w-full relative" cdkScrollable>
         <button (click)="cerrarModal()" class="absolute top-2 right-3 text-gray-500 hover:text-red-600 text-xl">
             &times;
         </button>
@@ -107,10 +107,24 @@
 
             <div>
                 <label class="block text-sm font-medium text-green-700 mb-1">Fecha</label>
-                <input type="date" formControlName="fecha" [attr.min]="hoy"
-                    class="block w-full rounded-lg border border-gray-300 px-4 py-2 text-sm shadow-sm focus:border-green-700 focus:ring focus:ring-green-200 focus:outline-none transition" />
+                <input ngxDaterangepickerMd formControlName="rangoFechas" class="p-2 border rounded w-full" [locale]="localeEs" placeholder="Selecciona fecha de entrada y salida" />
+                <!-- <input type="date" formControlName="fecha" [attr.min]="hoy"
+                    class="block w-full rounded-lg border border-gray-300 px-4 py-2 text-sm shadow-sm focus:border-green-700 focus:ring focus:ring-green-200 focus:outline-none transition" /> -->
             </div>
+
+
         </form>
+        <!-- <input class="w-full p-2 border rounded focus:outline-none" ngxDaterangepickerMd
+                [locale]="{ format: 'DD/MM/YYYY' }" [(ngModel)]="selectedDateRange"
+                placeholder="Selecciona rango de fechas" />
+
+            <div class="grid grid-cols-7 gap-2 p-4">
+                <div *ngFor="let date of fechasDelMes" (click)="seleccionarFecha(date)"
+                    [class.bg-blue-500]="esFechaSeleccionada(date)" [class.text-white]="esFechaSeleccionada(date)"
+                    class="cursor-pointer text-center py-2 rounded hover:bg-blue-200">
+                    {{ date.getDate() }}
+                </div>
+            </div> -->
 
 
         <div class="mt-4 flex justify-end">
