--- a/src/app/components/hoteles/detalles-hotel/detalle-hotel.component.html
+++ b/src/app/components/hoteles/detalles-hotel/detalle-hotel.component.html
@@ -67,16 +67,17 @@
         </div>
     </div>
 </div>
-<!-- Modal con formulario -->
+
 <div *ngIf="modalAbierto" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 px-6">
-    <div class="bg-white p-6 rounded-lg shadow-lg max-w-md w-full relative" cdkScrollable>
-        <button (click)="cerrarModal()" class="absolute top-2 right-3 text-gray-500 hover:text-red-600 text-xl">
+    <div class="bg-white p-6 rounded-lg shadow-lg max-w-md w-full relative max-h-[80vh] overflow-y-auto"
+        style="box-sizing: border-box;">
+        <button (click)="cerrarModal()" class="absolute top-2 right-3 text-gray-500 hover:text-red-600 text-3xl">
             &times;
         </button>
 
         <h2 class="text-2xl font-bold mb-4 text-green-800">Solicitar cotización</h2>
 
-        <form [formGroup]="reservacionForm" class="space-y-6">
+        <form [formGroup]="reservacionForm" class="space-y-4">
             <div>
                 <label class="block text-sm font-medium text-green-700 mb-1">Adultos</label>
                 <input type="number" formControlName="adultos" min="1"
@@ -93,42 +94,45 @@
                 <label class="block text-sm font-semibold text-green-700 mb-1">Edad del niño {{ i + 1 }}:</label>
                 <select [formControl]="edadControl"
                     class="w-full px-4 py-2 text-sm border border-gray-300 rounded-lg shadow-sm bg-white focus:outline-none focus:ring-2 focus:ring-green-300 focus:border-green-700 transition">
-                    <option *ngFor="let edad of [].constructor(19); let j = index" [value]="j">
+                    <option *ngFor="let edad of [].constructor(18); let j = index" [value]="j">
                         {{ j }}
                     </option>
                 </select>
             </div>
 
+            <div class="space-y-0">
+                <mat-form-field class="w-full" [formGroupName]="'rangoFechas'">
+                    <mat-label class="block text-sm font-semibold text-green-700 mb-1">Rango de fechas</mat-label>
+
+                    <mat-date-range-input [rangePicker]="picker" [dateFilter]="dateFilter">
+                        <input matStartDate placeholder="Fecha inicio" formControlName="start" />
+                        <input matEndDate placeholder="Fecha fin" formControlName="end" />
+                    </mat-date-range-input>
+
+                    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-date-range-picker #picker></mat-date-range-picker>
+                </mat-form-field>
+
+                <div>
+                    <label class="block text-sm font-medium text-green-700 mb-1">Noches</label>
+                    <input type="number" formControlName="noches" min="1"
+                        class="block w-full rounded-lg border border-gray-300 px-4 py-2 text-sm shadow-sm focus:border-green-700 focus:ring focus:ring-green-200 focus:outline-none transition" />
+                </div>
+            </div>
+
             <div>
-                <label class="block text-sm font-medium text-green-700 mb-1">Noches</label>
-                <input type="number" formControlName="noches" min="1"
+                <label class="block text-sm font-medium text-green-700 mb-1">Nombre</label>
+                <input  formControlName="nombre" min="1"
                     class="block w-full rounded-lg border border-gray-300 px-4 py-2 text-sm shadow-sm focus:border-green-700 focus:ring focus:ring-green-200 focus:outline-none transition" />
             </div>
-
             <div>
-                <label class="block text-sm font-medium text-green-700 mb-1">Fecha</label>
-                <input ngxDaterangepickerMd formControlName="rangoFechas" class="p-2 border rounded w-full" [locale]="localeEs" placeholder="Selecciona fecha de entrada y salida" />
-                <!-- <input type="date" formControlName="fecha" [attr.min]="hoy"
-                    class="block w-full rounded-lg border border-gray-300 px-4 py-2 text-sm shadow-sm focus:border-green-700 focus:ring focus:ring-green-200 focus:outline-none transition" /> -->
+                <label class="block text-sm font-medium text-green-700 mb-1">Apellido</label>
+                <input  formControlName="apellido" min="1"
+                    class="block w-full rounded-lg border border-gray-300 px-4 py-2 text-sm shadow-sm focus:border-green-700 focus:ring focus:ring-green-200 focus:outline-none transition" />
             </div>
-
-
         </form>
-        <!-- <input class="w-full p-2 border rounded focus:outline-none" ngxDaterangepickerMd
-                [locale]="{ format: 'DD/MM/YYYY' }" [(ngModel)]="selectedDateRange"
-                placeholder="Selecciona rango de fechas" />
-
-            <div class="grid grid-cols-7 gap-2 p-4">
-                <div *ngFor="let date of fechasDelMes" (click)="seleccionarFecha(date)"
-                    [class.bg-blue-500]="esFechaSeleccionada(date)" [class.text-white]="esFechaSeleccionada(date)"
-                    class="cursor-pointer text-center py-2 rounded hover:bg-blue-200">
-                    {{ date.getDate() }}
-                </div>
-            </div> -->
-
-
         <div class="mt-4 flex justify-end">
-            <button mat-flat-button color="primary" class="mr-2 flex items-center w-full text-white"
+            <button mat-flat-button color="primary" [disabled]="reservacionForm.invalid" class="mr-2 flex items-center w-full text-white"
                 (click)="abrirWhatsApp()">
                 Solictar cotización por WhatsApp
             </button>
