--- a/src/app/components/hoteles/hoteles.component.html
+++ b/src/app/components/hoteles/hoteles.component.html
@@ -1,4 +1,4 @@
-<div class="absolute inset-0 flex flex-col min-w-0 overflow-y-auto" cdkScrollable>
+<div  #scrollContainer class="absolute inset-0 flex flex-col min-w-0 overflow-y-auto" cdkScrollable>
 
     <div class="flex min-w-0 flex-auto flex-col">
         <div class="flex-auto p-3 sm:p-5">
@@ -74,8 +74,7 @@
                                 <div>Galería</div>
                             </div>
 
-                            <div
-                                class="w-10 h-10 rounded-full text-white flex items-center justify-center shadow-md">
+                            <div class="w-10 h-10 rounded-full text-white flex items-center justify-center shadow-md">
                                 <mat-icon [svgIcon]="'heroicons_outline:arrow-right-circle'"
                                     class="text-white w-6 h-6"></mat-icon>
                             </div>
