--- a/src/app/layout/layouts/horizontal/material/material.component.html
+++ b/src/app/layout/layouts/horizontal/material/material.component.html
@@ -20,12 +20,12 @@
         <div
             class="bg-card w-full max-w-360 overflow-hidden border-b sm:m-8 sm:mb-0 sm:rounded-t-xl sm:py-3 sm:shadow-2xl md:mx-8 md:mt-12 md:pb-3 md:pt-4">
             <div class="relative flex h-16 flex-0 flex-auto items-center px-4 md:px-6">
-                @if (!isScreenSmall) {
+                <!-- @if (!isScreenSmall) { -->
                 <img class="w-56 h-15" src="assets/images/logos/trotapie.jpg" alt="Logo Trotapie" />
-                }
-                @if (isScreenSmall) {
-                <img class="w-15 h-15" src="assets/images/logos/trotapie.png" alt="Logo Trotapie" />
-                }
+                <!-- } -->
+                <!-- @if (isScreenSmall) { -->
+                <!-- <img class="w-15 h-15" src="assets/images/logos/trotapie.png" alt="Logo Trotapie" /> -->
+                <!-- } -->
                 <!-- Components -->
                 <!-- <div
                     class="ml-auto flex items-center space-x-1 pl-2 sm:space-x-2"
